<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_MotorParameters" Id="{f49bf604-d6b1-4818-96c7-95d7a47079ac}">
    <Declaration><![CDATA[// Task 3
TYPE ST_MotorParameters :
STRUCT
	fMaxSpeed		: REAL;
	fMinSpeed		: REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>