<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="F_UpdateParameterRef" Id="{467f0860-abb2-429e-8c89-f820a9a9afaf}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_UpdateParameterRef : REAL
VAR_INPUT
    bUpdateValue : BOOL;
   	fNewValue : REAL;
	stMotorParameters : REFERENCE TO ST_MotorParameters;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[	IF bUpdateValue THEN
        stMotorParameters.fMaxSpeed := fNewValue;
    ELSE
        stMotorParameters.fMaxSpeed := stMotorParameters.fMaxSpeed;
    END_IF]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>